# alfred-workflow-app-store-finder

./: .gitignore  README.md  appstorefinder.alfredworkflow  clean.py  fabfile.py  info.plist  main.py  pyproject.toml
src/: consts.py  models.py  utils.py
