[tool.poetry]
name = "alfred-workflow-macos-app-store"
version = "0.1.0"
description = "An Alfred workflow to search for apps in MacOS Appstore"
authors = ["Doon"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^2.7"
Alfred-Workflow = "^1.40.0"
furl = "^2.1.2"
attrs = "^21.2.0"
typing = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
